--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@libsql/client": "^0.17.0",
     "bcryptjs": "^3.0.3",
     "jspdf": "^4.2.0",
-    "next": "^15.3.1",
+    "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "react": "19.2.3",
     "react-dom": "19.2.3"
@@ -21,7 +21,7 @@
     "@tailwindcss/postcss": "^4",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "^15.3.1",
+    "eslint-config-next": "16.1.6",
     "tailwindcss": "^4"
   }
 }
